# Gobang

./: .clang-format  .gitignore  CMakeLists.txt  ai.cpp  ai.h  cui.cpp  gobang.h  gobang_zh_CN.ts  gui.cpp  pch.h  pch_gui.h  window.cpp  window.h  window.ui
